--- a/5_15WebSocket/Views/Shared/_Layout.cshtml
+++ b/5_15WebSocket/Views/Shared/_Layout.cshtml
@@ -26,13 +26,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">_5_15WebSocket</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Tasks</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="account" asp-action="Login">Login</a></li>
+                    <li><a asp-area="" asp-controller="account" asp-action="signup">signup</a></li>
                 </ul>
             </div>
         </div>
@@ -43,9 +43,7 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; 2019 - _5_15WebSocket</p>
-        </footer>
+        
     </div>
 
     <environment include="Development">
